--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <body>
     <div id="App"></div>
     <script src="../public/bundle.js"></script>
-  </body>
+  <script type="text/javascript" src="bundle.js"></script></body>
 </html>
 
 
